# Agentic-AI

./: .gitignore  code.py  pyproject.toml  requirements.txt
Agno/: Multiple_Agents.py  agents.py
LangChain/: Embeddings.ipynb  Vector_Stores.ipynb  app.py  chatbots.ipynb  document_loader.ipynb  simple_app.ipynb  simplellmLCEL.ipynb  test.txt  text_splitter.ipynb
Langgraph/: Chains.ipynb  ReActAgents.ipynb  chatbot.ipynb  chatbot_with_multipletools.ipynb  dataclasses.ipynb  simplegraph.ipynb  streaming.ipynb  workflows.ipynb
Langgraph/Workflows/: Evaluator-optimizer.ipynb  Orchestrator-worker.ipynb  Routing.ipynb  parallelization.ipynb
MCP Server with Tools/: client.py  mathserver.py
Pydantic/: pydantic.ipynb
