[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "anyio>=4.9.0",
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.13",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "keyboard>=0.13.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.8",
    "mcp>=1.9.4",
    "openai>=1.88.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "pygame>=2.6.1",
    "pymupdf>=1.26.1",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "typing-extensions>=4.14.0",
]
