[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.3",
    "aiohttp>=3.12.13",
    "anyio>=4.9.0",
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.13",
    "duckduckgo-search>=8.0.4",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "groq>=0.28.0",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "lancedb>=0.24.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.3.0",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.24",
    "langchain-tavily>=0.2.5",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "langserve>=0.3.1",
    "mcp>=1.9.4",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.1",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "tantivy>=0.24.0",
    "typing-extensions>=4.14.0",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.63",
]
